del: 删除无用文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,32 @@
+# Logs
+logs
+*.log
+*.lock
+*.yaml
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+.cache/
+yarn.lock
+package-lock.json
 .DS_Store
+dist
+.hbuilderx
+unpackage
+nativeplugins
+node_modules
+*.local
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+unpackage
+
+auto-imports.d.ts
